--- a/pitchmaker.html
+++ b/pitchmaker.html
@@ -57,7 +57,7 @@ function splay(vote) {
     <option value="square">矩形波</option>
 </select><br />
 二回目の音程は一回目より？<br />
-<input type="button" onclick="splay(1)" value='high''> <input type="button" onclick="splay(0)" value='same'> <input type="button" onclick="splay(-1)" value='low'><br />
+<input type="button" onclick="splay(1)" value='high'> <input type="button" onclick="splay(0)" value='same'> <input type="button" onclick="splay(-1)" value='low'><br />
 <textarea id='reslt'></textarea>
 </form>
 </form>
