--- a/trainer.html
+++ b/trainer.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Pitchmaker</title>
+<title>Pitch sense trainer</title>
 <script type='text/javascript'>
 var cent1 = 0
 var cent2 = 0
@@ -28,9 +28,9 @@ function splay(vote) {
     if (vote == 'start') {
         //First time. Go for it.
     } else if (vote == (cent2 - cent1) || vote * (cent2 - cent1) > 0) { // same or positive.
-        document.getElementById('reslt').value=("Good!\n答: " + cent1 + ' vs ' + cent2 + ' cents')
+        document.getElementById('reslt').value=("Good!\nAnswer: " + cent1 + ' vs ' + cent2 + ' cents')
     } else { // negative: prev=nega & choice=posi or vice versa.
-        document.getElementById('reslt').value=("BAD!\n答: " + cent1 + ' vs ' + cent2 + ' cents')
+        document.getElementById('reslt').value=("BAD!\nAnswer: " + cent1 + ' vs ' + cent2 + ' cents')
     }
 
     cent1 = parseInt((Math.random() - 0.5) * document.getElementById("diffic").value)
@@ -45,18 +45,18 @@ function splay(vote) {
 <!--<input type='text' value="442" id="freq">Hz <input type="text" value="0.0" id="detune">cents<br />-->
 <input type="button" onclick="splay('start')" value='start'>
 <select id="diffic">
-    <option value="100">初級</option>
-    <option value="50">中級</option>
-    <option value="10">上級</option>
+    <option value="100">Easy</option>
+    <option value="50">Middle</option>
+    <option value="10">HARD</option>
 </select>
 
 <select id="suono">
-    <option value="sine">サイン波</option>
-    <option value="triangle">三角波</option>
-    <option value="sawtooth">ノコギリ波</option>
-    <option value="square">矩形波</option>
+    <option value="sine">Sine wave</option>
+    <option value="triangle">Tri. wave</option>
+    <option value="sawtooth">Saw wave</option>
+    <option value="square">Square</option>
 </select><br />
-二回目の音程は一回目より？<br />
+2nd tone (compared to the 1st) is: <br />
 <input type="button" onclick="splay(1)" value='high'> <input type="button" onclick="splay(0)" value='same'> <input type="button" onclick="splay(-1)" value='low'><br />
 <textarea id='reslt'></textarea>
 </form>
