--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@ function splay(vote) {
 </script>
 </head>
 <body>
+    <H3>Pitch sense trainer</H3>
+    Click start to begin. If you have good sense please try Middle or HARD difficulty.<br />
 <form name='foum'>
 <!--<input type='text' value="442" id="freq">Hz <input type="text" value="0.0" id="detune">cents<br />-->
 <input type="button" onclick="splay('start')" value='start'>
